--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,7 @@
   </li>
 </ul> -->
 
-<app-categorias-pesquisa></app-categorias-pesquisa>
+<!-- <app-categorias-pesquisa></app-categorias-pesquisa> -->
+
+<app-categorias-cadastro></app-categorias-cadastro>
 
