--- a/src/app/categorias/categorias-pesquisa/categorias-pesquisa.component.html
+++ b/src/app/categorias/categorias-pesquisa/categorias-pesquisa.component.html
@@ -1,34 +1,30 @@
 <p-toast></p-toast>
+<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle" acceptLabel="Sim" rejectLabel="Não">
+</p-confirmDialog>
+
 <div class="container">
+
+  <form autocomplete="off" (ngSubimit)="pesquisar()">
+
+    <div class="ui-g">
+      <div class="ui-g-12">
+        <h1>Categorias</h1>
+      </div>
+
+      <div class="ui-g-12 ui-fluid">
+        <label>Descrição</label>
+        <input pInputText type="text" #search (keyup.enter)="filtrarCategoria(search.value)"
+          placeholder="Pesquisar pela categoria; Ex: informatica" />
+      </div>
+
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+    </div>
+  </form>
   <div class="ui-g">
     <div class="ui-g-12">
-      <h1>Categorias</h1>
-    </div>
-
-    <div class="ui-g-12 ui-fluid">
-      <label>Descrição</label>
-      <input
-        pInputText
-        type="text"
-        #search
-        (keyup.enter)="filtrarCategoria(search.value)"
-        placeholder="Pesquisar pela categoria; Ex: informatica"
-      />
-    </div>
-
-    <div class="ui-g-12">
-      <button pButton type="submit" label="Pesquisar"></button>
-    </div>
-  </div>
-
-  <div class="ui-g">
-    <div class="ui-g-12">
-      <p-table
-        [value]="categorias"
-        [responsive]="true"
-        [paginator]="true"
-        [rows]="3"
-      >
+      <p-table [value]="categorias" [responsive]="true" [paginator]="true" [rows]="3">
         <ng-template pTemplate="header">
           <tr>
             <th class="col-id-header">Id</th>
@@ -41,23 +37,10 @@
             <td class="col-id">{{ categoria.id }}</td>
             <td>{{ categoria.nome }}</td>
             <td class="col-acoes">
-              <button
-                pButton
-                icon="pi pi-pencil"
-                pTooltip="Editar"
-                tooltipPosition="top"
-                showDelay="1000"
-                class="ui-button-info"
-              ></button>
-              <button
-                pButton
-                icon="pi pi-trash"
-                pTooltip="Excluir"
-                tooltipPosition="top"
-                showDelay="1000"
-                class="ui-button-danger"
-                (click)="excluir(categoria)"
-              ></button>
+              <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" showDelay="1000"
+                class="ui-button-info"></button>
+              <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top" showDelay="1000"
+                class="ui-button-danger" (click)="confirmaExclusao(categoria)"></button>
             </td>
           </tr>
         </ng-template>
