--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,5 +20,7 @@
 
 <!-- <app-categorias-pesquisa></app-categorias-pesquisa> -->
 
-<app-categorias-cadastro></app-categorias-cadastro>
+<!-- <app-categorias-cadastro></app-categorias-cadastro> -->
+
+<router-outlet></router-outlet>
 
