--- a/src/app/categorias/categorias-pesquisa/categorias-pesquisa.component.html
+++ b/src/app/categorias/categorias-pesquisa/categorias-pesquisa.component.html
@@ -38,7 +38,7 @@
             <td>{{ categoria.nome }}</td>
             <td class="col-acoes">
               <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" showDelay="1000"
-                class="ui-button-info"></button>
+                class="ui-button-info" [routerLink]="['/categorias',cat.id]"></button>
               <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top" showDelay="1000"
                 class="ui-button-danger" (click)="confirmaExclusao(categoria)"></button>
             </td>
@@ -49,6 +49,6 @@
   </div>
 
   <div class="ui-g-12">
-    <a pButton label="Nova Categoria"></a>
+    <a pButton label="Nova Categoria" routerLink="/categorias/novo"></a>
   </div>
 </div>
