--- a/src/app/estados/estados-pesquisa/estados-pesquisa.component.html
+++ b/src/app/estados/estados-pesquisa/estados-pesquisa.component.html
@@ -1,3 +1,54 @@
-<p>
-  estados-pesquisa works!
-</p>
+<p-toast></p-toast>
+<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle" acceptLabel="Sim" rejectLabel="Não">
+</p-confirmDialog>
+
+<div class="container">
+
+  <form autocomplete="off" (ngSubimit)="pesquisar()">
+
+    <div class="ui-g">
+      <div class="ui-g-12">
+        <h1>Categorias</h1>
+      </div>
+
+      <div class="ui-g-12 ui-fluid">
+        <label>Descrição</label>
+        <input pInputText type="text" #search (keyup.enter)="filtrarCategoria(search.value)"
+          placeholder="Pesquisar pelo Estado; Ex: Santa Catarina" />
+      </div>
+
+      <div class="ui-g-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+    </div>
+  </form>
+  <div class="ui-g">
+    <div class="ui-g-12">
+      <p-table [value]="estados" [responsive]="true" [paginator]="true" [rows]="3">
+        <ng-template pTemplate="header">
+          <tr>
+            <th class="col-id-header">Id</th>
+            <th>Descrição</th>
+            <th class="col-acoes"></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-estado>
+          <tr>
+            <td class="col-id">{{ estado.id }}</td>
+            <td>{{ estado.nome }}</td>
+            <td class="col-acoes">
+              <button pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top" showDelay="1000"
+                class="ui-button-info" [routerLink]="['/estados',estado.id]"></button>
+              <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top" showDelay="1000"
+                class="ui-button-danger" (click)="confirmaExclusao(estado)"></button>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
+  </div>
+
+  <div class="ui-g-12">
+    <a pButton label="Novo Estado" routerLink="/estados/novo"></a>
+  </div>
+</div>
