--- a/src/app/cidades/cidades-cadastro/cidades-cadastro.component.html
+++ b/src/app/cidades/cidades-cadastro/cidades-cadastro.component.html
@@ -8,20 +8,22 @@
         <h1>{{editando? 'Edição de ' : 'Novo'}} Estado</h1>
       </div>
 
-      <div class="ui-g-12 ui-md-9 ui-fluid">
+      <div class="ui-g-12 ui-md-12 ui-fluid">
         <label>Nome</label>
-        <input pInputText type="text" name="nome" [(ngModel)]="estado.nome" #nome="ngModel" required minlength="3">
+        <input pInputText type="text" name="nome" [(ngModel)]="cidade.nome" #nome="ngModel" required minlength="3">
 
         <div *ngIf="nome.hasError('required') && nome.touched">Informe um nome</div>
         <div *ngIf="nome.hasError('minlength')">O nome deve ter no mínimo 3 caractares</div>
       </div>
-
+      <div class="ui-g-3 ui-fluid">
+        <p-dropdown [options]="estados" (ngModel)="estadoSelecionado" name="estado" optionLabel="nome"></p-dropdown>
+        <p>{{estadoSelecionado}}</p>
+      </div>
       <div class="ui-g-12">
         <button pButton type="submit" label="Salvar" [disabled]="f.invalid" class=" boxButton"></button>
         <a routerLink="/estados/novo" pButton type="button" label="Novo" class="ui-button-info" class=" boxButton"></a>
         <a routerLink="/estados">Voltar para a pesquisa</a>
       </div>
-
 
     </div>
   </form>
