--- a/src/app/cidades/cidades-cadastro/cidades-cadastro.component.html
+++ b/src/app/cidades/cidades-cadastro/cidades-cadastro.component.html
@@ -5,7 +5,7 @@
     <div class="ui-g">
 
       <div class="ui-g-12">
-        <h1>{{editando? 'Edição de ' : 'Novo'}} Estado</h1>
+        <h1>{{editando? 'Edição de ' : 'Nova'}} Cidade</h1>
       </div>
 
       <div class="ui-g-12 ui-md-12 ui-fluid">
@@ -16,8 +16,11 @@
         <div *ngIf="nome.hasError('minlength')">O nome deve ter no mínimo 3 caractares</div>
       </div>
       <div class="ui-g-3 ui-fluid">
-        <p-dropdown [options]="estados" (ngModel)="estadoSelecionado" name="estado" optionLabel="nome"></p-dropdown>
-        <p>{{estadoSelecionado}}</p>
+        <p-dropdown [options]="estados"
+        [(ngModel)]="cidade.estado.id"
+        [filter] = "true"
+        name="estado"
+        ></p-dropdown>
       </div>
       <div class="ui-g-12">
         <button pButton type="submit" label="Salvar" [disabled]="f.invalid" class=" boxButton"></button>
